src/test/deca/syntax/invalid/our_synt_tests/alex-and_synt.deca
// Description:
//    tests de programme correct lexicalement et incorrect syntaxiquement pour
//    AND
//
// Resultats:
//    ./src/test/deca/syntax/invalid/our_tests/alex-and_synt.deca:14:4:
//    extraneous input '&&' expecting {IF, FALSE, NEW, NULL, READINT, READFLOAT,
//    PRINT, PRINTLN, PRINTLNX, PRINTX, RETURN, THIS, TRUE, WHILE, MINUS,
//    OPARENT, CBRACE, EXCLAM, SEMI, IDENT, INT, FLOAT, STRING}
//
// Historique:
//    12/01/2017

{
    &&
}
